--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ cd freebsd
 curl -sO https://bahaapix.github.io/free-bsd/setup.sh
 chmod +x setup.sh
 cd bsd/bspsm
-curl -s https://bahaapix.github.io/free-bsd/bsp/bspwm/bspwmrc
+curl -sO https://bahaapix.github.io/free-bsd/bsp/bspwm/bspwmrc
 cd ../sxhkd
-curl -s https://bahaapix.github.io/free-bsd/bsp/sxhkd/sxhkdrc
+curl -sO https://bahaapix.github.io/free-bsd/bsp/sxhkd/sxhkdrc
 cd ../..
 sh setup.sh
