--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ mkdir -p freebsd/bsp/bspwm freebsd/bsp/sxhkd
 cd freebsd
 curl -sO https://bahaapix.github.io/free-bsd/setup.sh
 chmod +x setup.sh
-cd bsd/bspsm
+cd bsp/bspwm
 curl -sO https://bahaapix.github.io/free-bsd/bsp/bspwm/bspwmrc
 cd ../sxhkd
 curl -sO https://bahaapix.github.io/free-bsd/bsp/sxhkd/sxhkdrc
