--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@ cd bsp/bspwm
 curl -sO https://bahaapix.github.io/free-bsd/bsp/bspwm/bspwmrc
 cd ../sxhkd
 curl -sO https://bahaapix.github.io/free-bsd/bsp/sxhkd/sxhkdrc
+cd ..
+mkdir walls
+cd walls
+curl -sO https://bahaapix.github.io/free-bsd/bsp/walls/kirby.jpg
 cd ../..
 sh setup.sh
